banner and video change in home and contact,project page

--- a/src/app/contact/page.module.scss
+++ b/src/app/contact/page.module.scss
@@ -76,7 +76,8 @@
         }
         img{
           width: 100%;
-          height: auto;
+          height: 341px;
+          // height: auto;
         }
       }
     }
