--- a/src/app/news/page.module.scss
+++ b/src/app/news/page.module.scss
@@ -387,7 +387,7 @@
           img {
             width: 100%;
             height: 100%;
-            min-height: 181px;
+            max-height: 250px;
             object-fit: cover;
             @media (max-width: 767px) {
               height: 181px;
