--- a/src/app/news/page3/page.module.scss
+++ b/src/app/news/page3/page.module.scss
@@ -1,7 +1,7 @@
 .main {
   min-height: 100vh;
   .blogDetails_banner {
-    padding: 10rem 0 6rem;
+    padding: 10rem 0 3rem;
     background: linear-gradient(#f3f0ea 70%, transparent 30%);
     @media (max-width: 991px) {
       padding: 10rem 0 4rem;
@@ -38,8 +38,8 @@
         }
         .heading {
           padding-right: 30px;
-          margin-bottom: 34px;
-          flex: 0 0 50%;
+          // margin-bottom: 34px;
+          flex: 0 0 80%;
           @media (max-width: 767px) {
             padding-right: 0;
           }
@@ -132,6 +132,68 @@
       }
     }
   }
+
+        .single_article {
+          padding-left: 60px;
+          padding-right: 60px;
+          @media (max-width: 767px) {
+            padding-left: 10px;
+            padding-right: 10px;
+          }
+          .heading {
+            display: flex;
+            margin-bottom: 10px;
+            flex: 0 0 80%;
+            align-items: center;
+            h1 {
+              font-size: 32px;
+              font-weight: 500;
+              letter-spacing: -2.093749761581421px;
+              background: linear-gradient(99.73deg,
+                  #15223c 42.68%,
+                  #182a50 103.89%);
+              -webkit-background-clip: text;
+              color: transparent;    
+              display: inline-block;    
+              @media (max-width: 767px) {
+                font-size: 26px;
+                line-height: 45px;
+              }
+            }    
+            span {
+              font-size: 30px;
+              font-weight: 500;
+              color: #12192c; 
+              padding-left: 20px;   
+              @media (max-width: 767px) {
+                font-size: 24px;
+                line-height: 45px;
+                padding-left: 10px;   
+              }
+            }    
+          }    
+          p {
+            font-size: 17.21px;
+            line-height: 28.7px;
+            color: #12192c;
+            display: flex;
+            align-items: center;
+            @media (max-width: 767px) {
+              font-size: 14px;
+              line-height: 28.7px;
+            }
+          }   
+            .article_img {
+              width: 100%;
+              max-height: auto;
+              object-fit: cover;      
+              @media (max-width: 767px) {
+                max-height: 400px;
+              }
+            }
+          }
+          
+
   .article_wrapper {
     display: flex;
     padding: 0 60px 6rem;
