--- a/src/app/news/page3/page.module.scss
+++ b/src/app/news/page3/page.module.scss
@@ -154,23 +154,22 @@
                   #182a50 103.89%);
               -webkit-background-clip: text;
               color: transparent;    
-              display: inline-block;    
+              display: inline-block; 
               @media (max-width: 767px) {
                 font-size: 26px;
                 line-height: 45px;
               }
-            }    
-            span {
-              font-size: 30px;
-              font-weight: 500;
-              color: #12192c; 
-              padding-left: 20px;   
-              @media (max-width: 767px) {
-                font-size: 24px;
-                line-height: 45px;
-                padding-left: 10px;   
-              }
-            }    
+              span {
+                font-size: 30px;
+                font-weight: 500;
+                color: #12192c; 
+                white-space: nowrap;
+                @media (max-width: 767px) {
+                  font-size: 24px;
+                  line-height: 45px;
+                }
+              }  
+            }
           }    
           p {
             font-size: 17.21px;
