--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -29,11 +29,11 @@
   .hero {
     position: relative;
     height: 800px;
-    min-height: 100vh;
+    // min-height: 100vh;
     // background-image: url("../../public/assets/images/hero_bg.webp");
-    background-image: url("../../public/assets/images/imagehomepage.jpeg");
-    // background-size:cover;
-    background-size:auto;
+    background-image: url("../../public/assets/images/mainbannerWaterfront.png");
+    background-size:cover;
+    // background-size:auto;
     background-position: center;
     @media (max-width: 991px) {
       height: 600px;
